--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sha2 = "0.10"
+serde = { version = "1.0", features = ["derive"] }
+csv = "1.1"
+serde_json = "1.0"
