--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 csv = "1.1"
 serde_json = "1.0"
+assert_cli = "0.6.3"
+tempfile = "3.14.0"
